--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -1,62 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet"
-        href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <!--<link rel="stylesheet"-->
-        <!--href="../../css/styles.css"/>-->
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Website List</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="../css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <div class="container-fluid">
-    <!--<h1>Website List</h1>-->
+    <nav class="navbar navbar-fixed-top cl-blue-navbar">
+        <div class="container-fluid">
+            <p class="navbar-text pull-left">
+                <a href="../user/profile.html" class="navbar-link cl-text-white">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+            </p>
+            <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+                Websites
+            </a>
+            <a href="website-new.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>
+        </div>
+    </nav>
 
-    <br/>
-    <ul class="list-group">
-      <li class="list-group-item">
-        Wikipedia
-      </li>
-      <li class="list-group-item">
-        Gizmodo
-      </li>
-    </ul>
+    <div class="container">
+        <ul class="list-group cl-list-group-borderless">
+            <li class="list-group-item cl-list-item-borderless">
+                <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+                <a href="../page/page-list.html">Address Book App</a>
+            </li>
+            <li class="list-group-item cl-list-item-borderless">
+                <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+                <a href="../page/page-list.html">Blogger</a>
+            </li>
+            <li class="list-group-item cl-list-item-borderless">
+                <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+                <a href="../page/page-list.html">Blogging App</a>
+            </li>
+            <li class="list-group-item cl-list-item-borderless">
+                <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+                <a href="../page/page-list.html">Script Testing App</a>
+            </li>
+        </ul>
+    </div>
 
-    <!--<ul class="list-group">-->
-      <!--<li class="list-group-item active">-->
-        <!--Name-->
-      <!--</li>-->
-      <!--<li class="list-group-item">-->
-        <!--<div class="row">-->
-          <!--<div class="col-xs-9 col-sm-6 col-md-3">-->
-            <!--Wikipedia-->
-          <!--</div>-->
-          <!--<div class="col-md-3 hidden-xs hidden-sm">-->
-            <!--1/2/2017-->
-          <!--</div>-->
-          <!--<div class="col-xs-3 col-sm-3 col-md-3 hidden-xs">-->
-            <!--alice-->
-          <!--</div>-->
-          <!--<div class="col-xs-3">-->
-            <!--<a class="pull-right" href="website-edit.html">-->
-              <!--<span class="glyphicon glyphicon-cog"></span>-->
-            <!--</a>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li class="list-group-item">-->
-        <!--Cnet-->
-        <!--<a class="pull-right" href="website-edit.html">-->
-          <!--<span class="glyphicon glyphicon-cog"></span>-->
-        <!--</a>-->
-      <!--</li>-->
-      <!--<li class="list-group-item">-->
-        <!--Gizmodo-->
-        <!--<a class="pull-right" href="website-edit.html">-->
-          <!--<span class="glyphicon glyphicon-cog"></span>-->
-        <!--</a>-->
-      <!--</li>-->
-    <!--</ul>-->
-  </div>
+    <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
+        <div class="container-fuild">
+            <a href="../user/profile.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+                <span class="glyphicon glyphicon-user"></span>
+            </a>
+        </div>
+    </nav>
 </body>
 </html>
