--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Websits Edit</title>
+    <title>Websits New</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="../css/styles.css" rel="stylesheet"/>
@@ -20,7 +20,7 @@
                 <a class="cl-text-white navbar-brand cl-text-bold" href="#">
                     Websites
                 </a>
-                <a href="website-new.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+                <a href="#" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </div>
@@ -28,7 +28,7 @@
         <div class="col-xs-8">
             <div class="container-fluid">
                 <a class="cl-text-white navbar-brand cl-text-bold" href="#">
-                    Edit Websites
+                    New Websites
                 </a>
                 <a href="website-list.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
                     <span class="glyphicon glyphicon-ok"></span>
@@ -62,15 +62,13 @@
     <div class="col-xs-8">
         <form>
             <div class="form-group">
-                <label for="website-name">Website Name</label>
-                <input type="text" class="form-control" id="website-name" placeholder="Blogger">
+                <label for="website-name">Name</label>
+                <input type="text" class="form-control" id="website-name" placeholder="Name">
             </div>
             <div class="form-group">
-                <label for="website-description">Website Description</label>
-                <textarea id="website-description" class="form-control" rows="5"
-                          placeholder="Blog is a blog-publishing service."></textarea>
+                <label for="website-description">Description</label>
+                <textarea id="website-description" class="form-control" rows="5" placeholder="Description"></textarea>
             </div>
-            <a class="btn btn-danger  btn-block" href="website-list.html">Delete</a>
         </form>
     </div>
 </div>
