change the profile align

--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -10,13 +10,9 @@
 <body>
 
 <nav class="navbar navbar-fixed-top cl-blue-navbar">
-  <div class="container-fluid">
-    <p class="navbar-text pull-left">
-      <a href="../user/profile.html" class="cl-text-white cl-text-bold">
-        Profile
-      </a>
-    </p>
-  </div>
+  <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+    Profile
+  </a>
 </nav>
 
 
