modify index file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<app-root>
-</app-root>
+
+
+
+
+<router-outlet>
+<div class="container">
+  <ul><a routerLink="/login">                login               </a></ul>
+  <ul><a routerLink="/register">             register             </a></ul>
+</div>
+</router-outlet>
+
+
+
+
