--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,15 +1,21 @@
 
+
 <div class="container">
   <h1>Login</h1>
-  <input type="text"
-         class="form-control"
-         placeholder="username"/>
-  <input type="password"
-         class="form-control"
-         placeholder="password"/>
+  <form (ngSubmit) = "login()" #f="ngForm">
+    <label>Username</label>
+    <input   placeholder="username" name="username" type="text" class="form-control" ngModel required #username="ngModel"/>
 
-  <a class="btn btn-primary btn-block"
-     href="profile.html">Login</a>
-  <a class="btn btn-success btn-block"
-     href="register.html">Register</a>
+    <label>Password</label>
+    <input   placeholder="password" name="password" type="text" class="form-control" ngModel required #password="ngModel"/>
+
+    <span class="help-block" *ngIf="!username.valid && username.touched">
+        Please enter username!
+  </span>
+    <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
+
+    {{f.valid}}
+
+  </form>
+
 </div>
