--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -37,6 +37,34 @@
   <a class="btn btn-danger  btn-block" href="page-list.html">Delete</a>
 </div>
 
+
+<h1>Profile</h1>
+
+<h2> user: {{user.username}} </h2>
+
+{{user._id}}
+
+<a routerLink="/profile/{{user._id}}/website">Websites</a>
+<br/>
+
+<input [(ngModel)]="user.username"/>
+<br/>
+
+<input [(ngModel)]="user.password" type="password"/>
+<br/>
+
+
+
+<input [(ngModel)]="user.firstName"/>
+<br/>
+
+<input [(ngModel)]="user.lastName"/>
+<br/>
+
+<button (click)="updateUser(user)">Update</button>
+
+
+
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
