--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,21 +1,29 @@
 
-
-<div class="container">
-  <h1>Login</h1>
-  <form (ngSubmit) = "login()" #f="ngForm">
-    <label>Username</label>
-    <input   placeholder="username" name="username" type="text" class="form-control" ngModel required #username="ngModel"/>
-
-    <label>Password</label>
-    <input   placeholder="password" name="password" type="text" class="form-control" ngModel required #password="ngModel"/>
-
-    <span class="help-block" *ngIf="!username.valid && username.touched">
-        Please enter username!
-  </span>
-    <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
-
-    {{f.valid}}
-
-  </form>
+<div *ngIf="errorFlag"
+     class="alert alert-danger">
+  {{errorMsg}}
 
 </div>
+
+
+<form (ngSubmit) = "login()" #f="ngForm">
+  <label>Username</label>
+  <input   placeholder="username" name="username" type="text" class="form-control" ngModel required #username="ngModel"/>
+
+  <label>Password</label>
+  <input   placeholder="password" name="password" type="text" class="form-control" ngModel required minlength="6" #password="ngModel"/>
+
+  <span class="help-block" *ngIf="!username.valid && username.touched">
+        Please enter username!
+  </span>
+  <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
+
+  {{f.valid}}
+
+</form>
+
+
+
+
+
+
