--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -8,33 +8,57 @@
   </a>
 </nav>
 
+<h1>Profile</h1>
 
-<div class="container">
+<h2> user: {{user.username}} </h2>
 
-  <form>
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" placeholder="Username">
-    </div>
-    <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email" placeholder="example: alice@wonderland.com">
-    </div>
-    <div class="form-group">
-      <label for="first-name">First Name</label>
-      <input type="text" class="form-control" id="first-name" placeholder="Alice">
-    </div>
-    <div class="form-group">
-      <label for="last-name">Last Name</label>
-      <input type="text" class="form-control" id="last-name" placeholder="Wonderland">
-    </div>
-  </form>
+{{user._id}}
 
-  <a class="btn btn-primary btn-block"
-     href="../website/website-list.html">Websites</a>
-  <a class="btn btn-danger  btn-block"
-     href="login.html">Logout</a>
-</div>
+<a routerLink="/profile/{{user._id}}/website">Websites</a>
+<br/>
+
+<input [(ngModel)]="user.username"/>
+<br/>
+
+<input [(ngModel)]="user.password" type="password"/>
+<br/>
+
+
+
+<input [(ngModel)]="user.firstName"/>
+<br/>
+
+<input [(ngModel)]="user.lastName"/>
+<br/>
+
+<button (click)="updateUser(user)">Update</button>
+
+<!--<div class="container">-->
+
+  <!--<form>-->
+    <!--<div class="form-group">-->
+      <!--<label for="username">Username</label>-->
+      <!--<input type="text" class="form-control" id="username" placeholder="Username">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="email">Email address</label>-->
+      <!--<input type="email" class="form-control" id="email" placeholder="example: alice@wonderland.com">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="first-name">First Name</label>-->
+      <!--<input type="text" class="form-control" id="first-name" placeholder="Alice">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="last-name">Last Name</label>-->
+      <!--<input type="text" class="form-control" id="last-name" placeholder="Wonderland">-->
+    <!--</div>-->
+  <!--</form>-->
+
+  <!--<a class="btn btn-primary btn-block"-->
+     <!--href="../website/website-list.html">Websites</a>-->
+  <!--<a class="btn btn-danger  btn-block"-->
+     <!--href="login.html">Logout</a>-->
+<!--</div>-->
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
@@ -62,3 +86,5 @@
     </div>
   </div>
 </nav>
+
+
