add list component

--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -24,6 +24,13 @@
 </nav>
 
 
+<div *ngFor="let page of pages">
+  {{page.name}}
+  {{page.title}}
+</div>
+
+
+
 <div class="container-fluid cl-container-padding">
   <ul class="list-group cl-list-group-borderless">
     <li class="list-group-item cl-list-item-borderless">
