add example for test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,14 @@
 <div class="container">
   <ul><a routerLink="/login">                login               </a></ul>
   <ul><a routerLink="/register">             register             </a></ul>
+  <ul><a routerLink="/user/10/website/new">          WebsiteNewComponent               </a></ul>
+  <ul><a routerLink="/user/10/website/11">          WebsiteNewComponentWithId              </a></ul>
+  <ul><a routerLink="/user/10/website/11/page">          PageListComponent               </a></ul>
+  <ul><a routerLink="/user/10/website/11/page/new">          PageNewComponent               </a></ul>
+  <ul><a routerLink="/user/10/website/11/page/12">          PageEditComponent               </a></ul>
+  <ul><a routerLink="/user/10/website/11/page/12/widget">          WidgetListComponent               </a></ul>
+  <ul><a routerLink="/user/10/website/11/page/12/widget/new">          WidgetChooserComponent               </a></ul>
+  <ul><a routerLink="/user/10/website/11/page/12/widget/12">          WidgetEditComponent               </a></ul>
 </div>
 </router-outlet>
 
