--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -5,26 +5,22 @@
   <div class="navbar-brand font-weight-bold">
     Widget Edit
   </div>
-  <a class="btn navbar-brand pull-right" (click)="updateWidget(widget)">
-    <span class="glyphicon glyphicon-ok text-dark"></span>
-  </a>
+  <button class="btn navbar-brand pull-right" (click)="updateWidget(widget)">
+    Update
+  </button>
 </nav>
 <div class="container-fluid cl-body-padding">
   <form>
     <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" name="name" placeholder="Name">
-    </div>
-    <div class="form-group">
-      <label for="text">Text</label>
+      <label >Text</label>
       <input [(ngModel)]="widget.text" type="text" class="form-control" name="text" placeholder="Text">
     </div>
     <div class="form-group">
-      <label for="size">Size</label>
+      <label >Size</label>
       <input [(ngModel)]="widget.size" type="text" class="form-control" name="size" placeholder="Size">
     </div>
   </form>
-  <a (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</a>
+  <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</button>
 </div>
 <nav class="navbar navbar-fixed-bottom navbar-light bg-secondary">
   <a class="btn navbar-brand pull-right" routerLink="/user/{{userId}}">
