--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -5,37 +5,29 @@
   <div class="navbar-brand font-weight-bold">
     Widget Edit
   </div>
-  <a class="btn navbar-brand pull-right" (click)="updateWidget(widget)">
-    <span class="glyphicon glyphicon-ok text-dark"></span>
-  </a>
+  <button class="btn navbar-brand pull-right" (click)="updateWidget(widget)">
+    Update
+  </button>
 </nav>
 <div class="container-fluid cl-body-padding">
   <form>
     <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" name="name" placeholder="Name">
-    </div>
-    <div class="form-group">
-      <label for="image-text">Text</label>
-      <input type="text" class="form-control" name="image-text" placeholder="Text">
-    </div>
-    <div class="form-group">
-      <label for="url">URL</label>
+      <label >URL</label>
       <input [(ngModel)]="widget.url" type="text" class="form-control" name="url" placeholder="Image URL">
     </div>
     <div class="form-group">
-      <label for="width">Width</label>
+      <label >Width</label>
       <input [(ngModel)]="widget.width" type="text" class="form-control" name="width" placeholder="100%">
     </div>
     <div class="form-group">
-      <label for="exampleInputFile">Upload</label>
+      <label >Upload</label>
       <input type="file" class="form-control" name="exampleInputFile">
     </div>
     <div class="form-group">
       <button class="btn btn-block btn-primary">Upload Image</button>
     </div>
   </form>
-  <a (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</a>
+  <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</button>
 </div>
 <nav class="navbar navbar-fixed-bottom navbar-light bg-secondary">
   <a class="navbar-brand pull-right" routerLink="/user/{{userId}}">
