--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
 <router-outlet>
   <div class="container">
 
-    <ul><a routerLink="/login">                login               </a></ul>
+    <ul><a routerLink="/login">        user        login               </a></ul>
     <ul><a routerLink="/register">             register             </a></ul>
+    <ul> <a routerLink="/user/123">         Profile              </a></ul>
 
     <ul><a routerLink="/user/123/website">          WebSiteList               </a></ul>
     <ul><a routerLink="/user/123/website/new">          WebsiteNewComponent               </a></ul>
