--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -5,6 +5,11 @@
 </nav>
 
 <div class="container cl-body-padding">
+
+  <div *ngIf="errorFlag" class="alert alert-danger">
+    {{errorMsg}}
+  </div>
+
     <form (ngSubmit)="updateUser()" #f="ngForm">
 
     <div class="form-group">
@@ -23,8 +28,13 @@
     </div>
 
       <div class="form-group">
-        <button  class="btn btn-primary btn-block" type="submit">Update</button>
+      <button  class="btn btn-primary btn-block" type="submit">Update</button>
+    </div>
+
+      <div class="form-group">
+        <button routerLink="/login" (click)="deleteUser()" class="btn btn-danger btn-block">Delete</button>
       </div>
+
 
     <div class="form-group">
       <a routerLink="/login" class="btn btn-danger btn-block">Logout</a>
