add widget module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,11 @@
     <ul><a routerLink="/user/123/website/111/page/100/widget">          WidgetListComponent               </a></ul>
     <ul><a routerLink="/user/123/website/111/page/100/widget/new">          WidgetChooserComponent               </a></ul>
     <ul><a routerLink="/user/123/website/111/page/100/widget/123">          WidgetEditComponentWithId              </a></ul>
+    <ul> <a routerLink="/user/123/website/111/page/3/widget/100">WidgetHeading </a></ul>
+    <ul> <a routerLink="/user/123/website/111/page/3/widget/200">WidgetImage </a></ul>
+    <ul> <a routerLink="/user/123/website/111/page/3/widget/300">WidgetYoutube </a></ul>
+    <ul> <a routerLink="/user/123/website/111/page/3/widget/400">WidgetHTML </a></ul>
+    <ul> <a routerLink="/user/123/website/111/page/3/widget/500">WidgetTEXT </a></ul>
 
   </div>
 </router-outlet>
