--- a/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
+++ b/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
@@ -25,12 +25,8 @@
       <input type="text" class="form-control" id="heading-name" placeholder="Name">
     </div>
     <div class="form-group">
-      <label for="heading-text">Text</label>
-      <input [(ngModel)]="widget.text" type="text" class="form-control" id="heading-text" placeholder="Text" [ngModelOptions]="{standalone: true}">
-    </div>
-    <div class="form-group">
-      <label for="heading-size">Size</label>
-      <input [(ngModel)]="widget.size" type="text" class="form-control" id="heading-size" placeholder="Heading Size" [ngModelOptions]="{standalone: true}">
+      <label >HTML</label>
+      <textarea [(ngModel)]="widget.text" name="text" class="form-control" rows="5" placeholder="text"></textarea>
     </div>
   </form>
   <a class="btn btn-danger  btn-block" (click)="deleteWidget()">Delete</a>
