link and test  widget service

--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -5,7 +5,7 @@
   <div class="navbar-brand font-weight-bold">
     Widget Edit
   </div>
-  <button class="btn navbar-brand pull-right" (click)="updateWidget(widget)">
+  <button class="btn navbar-brand pull-right" (click)="updateWidget()">
     Update
   </button>
 </nav>
