--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -18,7 +18,14 @@
     <div class="form-group">
       <button class="btn extra-left-padding" (click)="createWidget('YOUTUBE')">Youtube</button>
     </div>
+    <div class="form-group">
+      <button class="btn extra-left-padding" (click)="createWidget('HTML')">HTML</button>
+    </div>
+    <div class="form-group">
+      <button class="btn extra-left-padding" (click)="createWidget('TEXT')">TEXT</button>
+    </div>
   </form>
+
 </div>
 
 
