--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -6,15 +6,12 @@
         </span>
       </a>
     </div>
-    <div class="navbar-text pull-right">
-      <a (click)="updateOrCreateWidget()" class="cl-icon-padding cl-text-black">
-        <span class="glyphicon glyphicon-ok">
-        </span>
-      </a>
+    <div class="navbar-brand font-weight-bold">
+      Widget Edit
     </div>
-    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
-      Widgets Edit
-    </a>
+    <button class="btn navbar-brand pull-right" (click)="updateWidget()">
+      Update
+    </button>
   </div>
 </nav>
 
@@ -33,7 +30,7 @@
       <input [(ngModel)]="widget.size" type="text" class="form-control" id="heading-size" placeholder="Heading Size" [ngModelOptions]="{standalone: true}">
     </div>
   </form>
-  <a class="btn btn-danger  btn-block" (click)="deleteWidget()">Delete</a>
+  <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</button>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
