link all the Service

--- a/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
+++ b/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
@@ -26,10 +26,8 @@
       <textarea [(ngModel)]="widget.text" name="text" class="form-control" rows="5" placeholder="text"></textarea>
     </div>
   </form>
-  <a class="btn btn-danger  btn-block" (click)="deleteWidget()">Delete</a>
+  <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete </button>
 </div>
-
-
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
