design the layout of the website and login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 
 
 <router-outlet>
-
-
-  <div class="container">
+  <br/>
+  <br/>
+  <br/>
+  <div class="main" >
     <div class="btn-group" dropdown>
       <button dropdownToggle type="button" class="btn btn-primary dropdown-toggle">
         Link <span class="caret"></span>
@@ -32,4 +33,5 @@
       </ul>
     </div>
   </div>
+  <br/>
 </router-outlet>
