--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,12 +1,17 @@
+
+
 <nav class="navbar navbar-fixed-top cl-blue-navbar">
   <div class="container-fluid">
     <p class="navbar-text pull-left">
-      <a routerLink=".." class="navbar-link cl-text-white">
+      <a href="../user/profile.html" class="navbar-link cl-text-white">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
-    <a class="cl-text-white navbar-brand cl-text-bold">
-    Websites
+    <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+      Websites
+    </a>
+    <a href="./user/{userId}/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+      <span class="glyphicon glyphicon-plus"></span>
     </a>
   </div>
 </nav>
