--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -1,32 +1,41 @@
-<nav class="navbar navbar-fixed-top navbar-light bg-secondary">
-  <a class="navbar-brand" routerLink="/user/{{userId}}/website/{{websiteId}}/page">
-    <span class="glyphicon glyphicon-chevron-left text-dark"></span>
-  </a>
-  <div class="navbar-brand font-weight-bold">
-    New Page
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid row">
+    <div class="navbar-text pull-left">
+      <a routerLink=".." class="cl-text-black cl-icon-padding">
+        <span class="glyphicon glyphicon-chevron-left">
+        </span>
+      </a>
+    </div>
+    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
+      New Page
+    </a>
   </div>
-  <button (click)="createPage(newPage)" class="btn btn-block btn-danger">New Page</button>
 </nav>
-<div class="container-fluid cl-body-padding">
+
+<div class="container">
   <form>
     <div class="form-group">
-      <label >Name</label>
-      <input [(ngModel)]="newPage.name" type="text" class="form-control" name="name" placeholder="Page Name" ngModel required>
+      <label for="page-name">Name</label>
+      <input [(ngModel)]="newPage.name" type="text" class="form-control" id="page-name" placeholder="Page Name" [ngModelOptions]="{standalone: true}">
     </div>
+
     <div class="form-group">
-      <label >Title</label>
-      <input [(ngModel)]="newPage.title" type="text" class="form-control" name="title" placeholder="Page Title" ngModel required>
+      <label for="page-title">Title</label>
+      <input [(ngModel)]="newPage.title" type="text" class="form-control" id="page-title" placeholder="Page Title" [ngModelOptions]="{standalone: true}">
     </div>
   </form>
+  <div class="form-group">
+    <a (click)="createPage()"  class="btn btn-primary btn-block">Create</a>
+  </div>
 </div>
-<nav class="navbar navbar-fixed-bottom navbar-light bg-secondary">
-  <a class="navbar-brand pull-right" routerLink="/user/{{userId}}">
-    <span class="glyphicon glyphicon-user text-primary"></span>
-  </a>
+
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid row">
+    <div class="pull-right navbar-text">
+      <a routerLink="../../../.." class="cl-icon-padding">
+        <span class="glyphicon glyphicon-user"></span>
+      </a>
+    </div>
+  </div>
 </nav>
-
-
-
-
-
-
