finish Widget Design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <br/>
   <br/>
   <br/>
-  <div class="main" >
+  <div class="container" >
     <div class="btn-group" dropdown>
       <button dropdownToggle type="button" class="btn btn-primary dropdown-toggle">
         Link <span class="caret"></span>
