--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid cl-body-padding">
+<div class="container">
   <div *ngIf="errorFlag" class="alert alert-danger">
     {{errorMsg}}
   </div>
