--- a/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
+++ b/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
@@ -26,6 +26,7 @@
       <textarea [(ngModel)]="widget.text" name="text" class="form-control" rows="5" placeholder="text"></textarea>
     </div>
   </form>
+  <button (click)="updateWidget()"class="btn btn-block btn-primary" > Update </button>
   <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete </button>
 </div>
 
