--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -40,6 +40,7 @@
     <button type="submit" class="btn btn-block btn-primary">Upload Image</button>
     <br/>
   </form>
+  <button (click)="updateWidget()"class="btn btn-block btn-primary" > Update </button>
   <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</button>
 </div>
 
