--- a/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
+++ b/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
@@ -41,7 +41,7 @@
           </span>
     </div>
   </form>
-
+  <button (click)="updateWidget()"class="btn btn-block btn-primary" > Update </button>
   <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</button>
 </div>
 
