--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -7,25 +7,24 @@
   </div>
 </nav>
 
-<div class="col-xs-7 cl-body-padding">
+<div class="container">
   <form>
     <div class="form-group">
-      <button class="btn extra-left-padding" (click)="createWidget('HEADER')">Header</button>
+      <button class="btn btn-info" (click)="createWidget('HEADING')">Header</button>
     </div>
     <div class="form-group">
-      <button class="btn extra-left-padding" (click)="createWidget('IMAGE')">Image</button>
+      <button class="btn btn-info" (click)="createWidget('IMAGE')">Image</button>
     </div>
     <div class="form-group">
-      <button class="btn extra-left-padding" (click)="createWidget('YOUTUBE')">Youtube</button>
+      <button class="btn btn-info" (click)="createWidget('YOUTUBE')">Youtube</button>
     </div>
     <div class="form-group">
-      <button class="btn extra-left-padding" (click)="createWidget('HTML')">HTML</button>
+      <button class="btn btn-info" (click)="createWidget('HTML')">HTML</button>
     </div>
     <div class="form-group">
-      <button class="btn extra-left-padding" (click)="createWidget('TEXT')">TEXT</button>
+      <button class="btn btn-info" (click)="createWidget('TEXT')">TEXT</button>
     </div>
   </form>
-
 </div>
 
 
