--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -9,9 +9,7 @@
     <div class="navbar-brand font-weight-bold">
       Widget Edit
     </div>
-    <button class="btn navbar-brand pull-right" (click)="updateWidget()">
-      Update
-    </button>
+
   </div>
 </nav>
 
@@ -30,6 +28,7 @@
       <input [(ngModel)]="widget.size" type="text" class="form-control" id="heading-size" placeholder="Heading Size" [ngModelOptions]="{standalone: true}">
     </div>
   </form>
+  <button (click)="updateWidget()"class="btn btn-block btn-primary" > Update </button>
   <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</button>
 </div>
 
