--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -25,7 +25,7 @@
       <input [(ngModel)]="widget.width" type="text" class="form-control" name="width" placeholder="100%">
     </div>
   </form>
-
+  <button (click)="updateWidget()"class="btn btn-block btn-primary" > Update </button>
   <button (click)="deleteWidget()" class="btn btn-block btn-danger">Delete</button>
 
 </div>
