debug the connection

--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -20,7 +20,7 @@
 
     <button (click)="updatePage()" class="btn btn-block btn-primary">Update</button>
     <button (click)="deletePage()" class="btn btn-block btn-danger">Delete</button>
-    <button routerLink="./widget" class="btn btn-block btn-danger">Widgets</button>
+    <button routerLink="./widget" class="btn btn-block btn-primary">Widgets</button>
   </form>
 </div>
 
