--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -39,7 +39,7 @@
 
     </form>
   <div >
-      <button routerLink="/user/{userId}/website"  class="btn btn-primary btn-block">Websites</button>
+      <button routerLink="/user/{{userId}}/website"  class="btn btn-primary btn-block">Websites</button>
     </div>
 </div>
 
