--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -21,7 +21,7 @@
     </div>
     <textarea [(ngModel)]="updatedWebsite.description" name="description" class="form-control" rows="5" placeholder="Description"></textarea>
     <div class="form-group">
-      <button (click)="updateWebsite()" class="btn btn-block btn-danger">Update</button>
+      <button (click)="updateWebsite()" class="btn btn-block btn-primary">Update</button>
     </div>
     <div class="form-group">
       <button (click)="deleteWebsite()" class="btn btn-block btn-danger">Delete</button>
