--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -10,7 +10,7 @@
     <a class="cl-text-white navbar-brand cl-text-bold" href="#">
       Websites
     </a>
-    <a href="./user/{userId}/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a href="./user/{{userId}}/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-plus"></span>
     </a>
   </div>
