--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -34,7 +34,7 @@
       <textarea [(ngModel)]="newWebsite.description" name="description" class="form-control" rows="5" placeholder="Description"></textarea>
     </div>
     <div class="form-group">
-      <button (click)="createWebsite()" class="btn btn-block btn-danger">Create</button>
+      <button (click)="createWebsite()" class="btn btn-block btn-primary">Create</button>
     </div>
   </form>
 </div>
